# Phy-Engine-Backend

./: API_Documentation.md  CMakeLists.txt  README.md  build_modified.sh  netlist_converter.py  wasm32-emscripten-pe-release.tar.xz
benchmark/0001.models/: 100000_random_links_cpu.cpp
include/phy_engine/pe_nl_fileformat/: archive.h  codec.h  model_registry.h  pe_nl_fileformat.h
include/phy_engine/phy_lab_wrapper/: pe_to_pl.h
include/phy_engine/phy_lab_wrapper/auto_layout/: auto_layout.h
include/phy_engine/verilog/digital/: pe_synth.h
src/: verilog2penl.cpp  verilog2plsav.cpp
src/targets/wasm32-emscripten/: Dockerfile
test/0004.solver/: bsim3v32_exact_aliases_smoke.cpp
test/0007.verilog/: pe_sys_urandom4.cpp  pe_vector_shift_sticky.cpp  sim_sys_urandom4.cpp
test/0014.phy_lab_wrapper/: auto_layout_smoke.cpp  pe_to_pl_all_digital_models_smoke.cpp
test/0015.verilog_compile/: pe_synth_absorption.cpp  pe_synth_adders_o3_interaction.cpp  pe_synth_bdd_decompose_mux.cpp  pe_synth_binary_complement_simplify.cpp  pe_synth_concat_lhs_assign.cpp  pe_synth_factoring_and_tree.cpp  pe_synth_factoring_or_tree.cpp  pe_synth_flatten_associative_and_or.cpp  pe_synth_flatten_deep_chain_stack_overflow.cpp  pe_synth_function_call_subprogram_block.cpp  pe_synth_multi_output_subcube_sharing.cpp  pe_synth_o3_qm_greedy_and_mapping.cpp  pe_synth_omax_smoke.cpp  pe_synth_opt_levels.cpp  pe_synth_qm_budget_disable.cpp  pe_synth_resub_sweep.cpp  pe_synth_rewrite_xor_xnor_double_not.cpp  pe_synth_rewrite_xor_xnor_pos.cpp  pe_synth_sweep_tt7_merge.cpp  pe_synth_techmap_cut_mapper.cpp
test/0017.tetris/: tetris_pe_sim_and_export.cpp
test/0019.snake/: snake_pe_sim_and_export.cpp
test/0020.fp16_calc/: fp16_calc_pe_sim_and_export.cpp  pe_fp16_addsub_unit.cpp  pe_fp16_addsub_wrapper.cpp
test/0021.fp16_fpu/: fp16_fpu_pe_sim_and_export.cpp  sim_fp16_fpu_crosscheck.cpp
test/0022.adder/: adder8_pe_sim_and_export.cpp
test/0023.fp8/: fp8_common.h
test/0024.mul2x2/: mul2x2_pe_sim_and_export.cpp
test/0025.mul8x8/: mul8x8_serial_pe_netlist_check.cpp
test/0028.16b_adc/: adc16_onehot_pe_sim_and_export.cpp
test/0029.snake_combine/: snake_combine_pe_sim_and_export.cpp
test/0030.snake6x6/: pe_synth_o3_cycle_smoke.cpp
test/0032.go/: go.cpp  go9x9_pe_to_pl_export.cpp
wasm32-emscripten-pe-release/: phy_engine.js  phy_engine.wasm
